--- a/views/company.html
+++ b/views/company.html
@@ -2,37 +2,7 @@
 
 {% block content %}
 <style>
-      .swiper {
-        width: 100%;
-        height: 100%;
-      }
 
-      .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-      }
-
-      .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
 
       #mediaKit{
         background:  linear-gradient(180deg, rgba(255, 255, 255, 0) 82.97%, #FFFFFF 95.16%, #FFFFFF 109.27%), linear-gradient(147.1deg, rgba(126, 83, 255, 0.2) 5.67%, rgba(126, 83, 255, 0) 52.89%), #F8FAFF; 
@@ -345,8 +315,7 @@
 
 
 <div class="card rounded-0 border-0">
-  <section id = 'mediaKit' class = 'card-img' style = ' height: 400vh'>
-</section>
+  <section id = 'mediaKit' class = 'card-img' style = ' height: 400vh'></section>
 
   <div class="card-img-overlay p-0">
 
@@ -432,7 +401,7 @@ Media Kit
 
       var swiper = new Swiper(".mySwiper", {
  
-        slidesPerView: 5,
+        slidesPerView: 3,
         spaceBetween: 30,
         centeredSlides: true,
         pagination: {
