--- a/views/career.html
+++ b/views/career.html
@@ -85,10 +85,12 @@
                 가치를 믿어요.</h5>
               <div class=""></div>
               <div class="ml-3">
-                <p class="card-text position-absolute bottom-0 start-3 col-5 ">실패는 잘못이 아니에요. 넘어지는 것을 두려워하지 않고, 다시 일어나 두 걸음
+                
+                <button onClick = "showUp($(this).attr('id'))" id = 'c1' class="ui icon button card-text position-absolute " style="right: 3vw;bottom: 1vw;"><i class="bi bi-plus-circle"></i>
+                </button>
+
+                <p class="card-text position-absolute bottom-0 start-3 col-5 c1 d-none" >실패는 잘못이 아니에요. 넘어지는 것을 두려워하지 않고, 다시 일어나 두 걸음
                   더 앞으로 나아가요.</p>
-                <p class="card-text position-absolute " style="right: 3vw;bottom: 1vw;"><i class="bi bi-plus-circle"></i>
-                </p>
               </div>
             </div>
           </div>
@@ -267,45 +269,25 @@
     </div>
   </section>
 </section>
-
-
-
-
-<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <div class="card">
-        <img src="img/1.jpeg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title col-2">시행착오의 
-            가치를 믿어요.</h5>
-          <p class="card-text col-5">실패는 잘못이 아니에요. 넘어지는 것을 두려워하지 않고, 다시 일어나 두 걸음 더 앞으로 나아가요.</p>
-          <p class="card-text col-5 float-end"><i class="bi bi-plus-circle"></i></p>
-        </div>
-      </div>
-  
-    </div>
-    <div class="carousel-item">
-      <img src="img/1.jpeg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/1.jpeg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>  -->
-
 {% endblock %}
 
 {% block localScript %} 
 <script>
+   AOS.init({
+    	once: true,
+  		easing: 'ease-in-out'
+    });
+    var iconButton = $("button");
+	iconButton.on("click", function() {
+		$(iconButton).removeClass('aos-animate');
+		setTimeout(function() {
+			$(iconButton).addClass('aos-animate');
+		}, 400);
+	});
+showUp = (myId) => {
+  document.getElementById("select_hour").textContent  = document.getElementById(myId).innerText;
+  document.getElementById("show_seat").classList.remove("d-none"); 
+}
 
 
 var swiper = new Swiper(".career-slide", {
